[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://Resources/Player.PNG" type="Texture2D" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=3]
[ext_resource path="res://Resources/HeartSymbol.png" type="Texture2D" id=4]
[ext_resource path="res://Scripts/CreationScene.gd" type="Script" id=5]
[ext_resource path="res://Resources/SquareSymbol.png" type="Texture2D" id=6]
[ext_resource path="res://Resources/TriangleSymbol.png" type="Texture2D" id=7]
[ext_resource path="res://Resources/MatiasSymbol.png" type="Texture2D" id=8]
[ext_resource path="res://Resources/SkullSymbol.png" type="Texture2D" id=9]
[ext_resource path="res://Scripts/Symbol.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Symbols.gd" type="Script" id=11]
[ext_resource path="res://Resources/CircleSymbol.png" type="Texture2D" id=12]
[ext_resource path="res://Scripts/GoalHolder.gd" type="Script" id=13]
[ext_resource path="res://Scripts/ResetCanvasButton.gd" type="Script" id=14]
[ext_resource path="res://Resources/StarSymbol.png" type="Texture2D" id=15]
[ext_resource path="res://Scripts/GridSquare.gd" type="Script" id=16]
[ext_resource path="res://Scripts/SkullSymbol.gd" type="Script" id=17]
[ext_resource path="res://Scripts/MatiasSymbol.gd" type="Script" id=18]
[ext_resource path="res://Scenes/CircleSymbol.gd" type="Script" id=19]
[ext_resource path="res://Scripts/SquareSymbol.gd" type="Script" id=20]
[ext_resource path="res://Scripts/StarSymbol.gd" type="Script" id=21]
[ext_resource path="res://Scripts/HeartSymbol.gd" type="Script" id=22]
[ext_resource path="res://Scripts/TriangleSymbol.gd" type="Script" id=23]
[ext_resource path="res://Scenes/SubmitButton.gd" type="Script" id=24]
[ext_resource path="res://Resources/Screen Shot 2022-08-02 at 2.18.53 PM.png" type="Texture2D" id=25]
[ext_resource path="res://Scenes/TimerLabel.gd" type="Script" id=26]
[ext_resource path="res://Scenes/GoBackButton.gd" type="Script" id=27]

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 8.625, 8.375 )

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 10, 4 )

[sub_resource type="QuadMesh" id=5]

[sub_resource type="QuadMesh" id=6]

[sub_resource type="QuadMesh" id=7]

[sub_resource type="CanvasItemMaterial" id=8]

[sub_resource type="QuadMesh" id=9]

[node name="CreationScene" type="Node2D"]
position = Vector2( 1, -1 )
script = ExtResource( 5 )

[node name="Settings" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Symbol" type="CharacterBody2D" parent="."]
script = ExtResource( 10 )

[node name="SymbolShape" type="CollisionShape2D" parent="Symbol"]
position = Vector2( 1, -1 )
scale = Vector2( 4, 4 )
shape = SubResource( 3 )

[node name="PlayerBody" type="CharacterBody2D" parent="."]
position = Vector2( 235, 230 )
scale = Vector2( 4, 4 )
z_index = 2
script = ExtResource( 1 )

[node name="PlayerShape" type="CollisionShape2D" parent="PlayerBody"]
shape = SubResource( 2 )

[node name="PlayerArms" type="Sprite2D" parent="PlayerBody/PlayerShape"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Symbols" type="Node" parent="."]
script = ExtResource( 11 )

[node name="SkullSymbol" type="Sprite2D" parent="Symbols"]
visible = false
position = Vector2( 86, 143 )
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )
script = ExtResource( 17 )

[node name="TriangleSymbol" type="Sprite2D" parent="Symbols"]
visible = false
position = Vector2( -2, -6 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
script = ExtResource( 23 )

[node name="HeartSymbol" type="Sprite2D" parent="Symbols"]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
script = ExtResource( 22 )

[node name="CircleSymbol" type="Sprite2D" parent="Symbols"]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )
script = ExtResource( 19 )

[node name="SquareSymbol" type="Sprite2D" parent="Symbols"]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
script = ExtResource( 20 )

[node name="StarSymbol" type="Sprite2D" parent="Symbols"]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 15 )
script = ExtResource( 21 )

[node name="MatiasSymbol" type="Sprite2D" parent="Symbols"]
visible = false
position = Vector2( -16, 2 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )
script = ExtResource( 18 )

[node name="ResetCanvasButton" type="Button" parent="."]
offset_left = 473.0
offset_top = 412.0
offset_right = 733.0
offset_bottom = 455.0
text = "Reset Canvas (R)"
script = ExtResource( 14 )

[node name="GoBackButton" type="Button" parent="."]
offset_left = 744.0
offset_top = 411.0
offset_right = 1004.0
offset_bottom = 454.0
text = "Back"
script = ExtResource( 27 )

[node name="GridSquare" type="MeshInstance2D" parent="."]
position = Vector2( 42, -35 )
scale = Vector2( 50, 50 )
mesh = SubResource( 5 )
script = ExtResource( 16 )

[node name="SymbolHolder" type="MeshInstance2D" parent="."]
position = Vector2( 510.625, 531.125 )
scale = Vector2( 990.75, 85 )
z_index = -1
mesh = SubResource( 6 )

[node name="GoalHolder" type="Node" parent="."]
script = ExtResource( 13 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="GoalHolder"]
visible = false
scale = Vector2( 200, 200 )
mesh = SubResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="GoalHolder"]
visible = false
z_index = -21

[node name="SubmitButton" type="Button" parent="GoalHolder/StaticBody2D"]
offset_left = 470.0
offset_top = 166.0
offset_right = 616.0
offset_bottom = 193.0
text = "Submit"
script = ExtResource( 24 )

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 474.0
offset_top = 211.0
offset_right = 651.0
offset_bottom = 244.0
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
text = "Score: 0/25

Total Score: 0"

[node name="ControlsLabel" type="Label" parent="."]
offset_left = 636.0
offset_top = 208.0
offset_right = 1000.0
offset_bottom = 375.0
text = "CONTROLS:
Move Player: Arrow Keys
Pick Up Symbols (From Bottom): A & D
Place Symbols: A & D

Once you have a design, press submit to check it against
the designs on the top right.
Your score is displayed to the left of this text.

Reset Canvas: R"

[node name="CompletedLabel" type="Label" parent="."]
visible = false
offset_left = 478.0
offset_top = 94.0
offset_right = 691.0
offset_bottom = 108.0
text = "You completed all of the designs!"

[node name="TimerLabel" type="Label" parent="."]
offset_left = 474.0
offset_top = 289.0
offset_right = 557.0
offset_bottom = 303.0
text = "Time Left: 5s"
script = ExtResource( 26 )

[node name="CompletedScreen" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 8 )
position = Vector2( 514.25, 299.876 )
scale = Vector2( 1029.5, 600.752 )
z_index = 10
mesh = SubResource( 9 )

[node name="ThanksForPlaying" type="Sprite2D" parent="CompletedScreen"]
position = Vector2( 0.00318474, -0.027288 )
scale = Vector2( 0.000622376, 0.00106656 )
z_index = 20
z_as_relative = false
texture = ExtResource( 25 )

[connection signal="pressed" from="ResetCanvasButton" to="ResetCanvasButton" method="click"]
[connection signal="pressed" from="GoBackButton" to="GoBackButton" method="click"]
[connection signal="pressed" from="GoalHolder/StaticBody2D/SubmitButton" to="GoalHolder/StaticBody2D/SubmitButton" method="click"]
